// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> should render the checkbox with the label after the icon 1`] = `
<div
  aria-checked={false}
  className="checkbox"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="checkbox"
  tabIndex={0}
>
  <Unchecked />
  <span>
    Test Label Deluxe
  </span>
</div>
`;

exports[`<Checkbox /> should render the checkbox with the label before the icon 1`] = `
<div
  aria-checked={false}
  className="checkbox"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="checkbox"
  tabIndex={0}
>
  <span>
    Test Label Deluxe
  </span>
  <Unchecked />
</div>
`;

exports[`<Checkbox /> should render the unchecked icon if "checked" is false 1`] = `
<div
  aria-checked={false}
  className="checkbox"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="checkbox"
  tabIndex={0}
>
  Test Label Deluxe
  <Unchecked />
</div>
`;

exports[`<Checkbox /> should render the unchecked icon if "checked" is false 2`] = `
<div
  aria-checked={true}
  className="checkbox"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="checkbox"
  tabIndex={0}
>
  Test Label Deluxe
  <Checked />
</div>
`;
